feat: update nginx configuration to specify server_name

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name 54.166.71.241 _;
 
     root /usr/share/nginx/html;
     index index.html;
