--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,14 +16,12 @@ services:
 
   frontend:
     build: ./frontend
-    command: npm run dev -- --host
+    command: sh -c "npm install && npm run build"
     volumes:
       - ./frontend:/app
       - /app/node_modules
-    ports:
-      - "5173:5173"
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
 
   nginx:
     image: nginx:alpine
