refactor: streamline frontend Dockerfile and update docker-compose.yml for improved service dependencies

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,18 @@
 # Dockerfile for Vite/React Frontend
-FROM node:20-alpine
 
+# Build stage
+FROM node:20-alpine as build
+
+# Update apk packages to reduce vulnerabilities
+RUN apk update && apk upgrade
 WORKDIR /app
-
 COPY package.json package-lock.json* ./
 RUN npm install
-
 COPY . .
-
 RUN npm run build
 
-EXPOSE 5173
-CMD ["npm", "run", "dev", "--", "--host"]
+# Production stage (not used directly, but for reference)
+FROM nginx:alpine as prod
+COPY --from=build /app/dist /usr/share/nginx/html
+
+EXPOSE 80
