--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,17 +11,11 @@ services:
     environment:
       - PYTHONDONTWRITEBYTECODE=1
       - PYTHONUNBUFFERED=1
-    depends_on:
-      - frontend
 
   frontend:
-    build: ./frontend
-    command: sh -c "npm install && npm run build"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    environment:
-      - NODE_ENV=production
+    build:
+      context: ./frontend
+      target: build
 
   nginx:
     image: nginx:alpine
@@ -31,5 +25,5 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/dist:/usr/share/nginx/html
     depends_on:
-      - frontend
       - backend
+      - frontend
