--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,17 +13,8 @@ services:
       - PYTHONUNBUFFERED=1
 
   frontend:
-    build:
-      context: ./frontend
-      target: build
-
-  nginx:
-    image: nginx:alpine
+    build: ./frontend
     ports:
       - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./frontend/dist:/usr/share/nginx/html
     depends_on:
       - backend
-      - frontend
