--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,8 +11,9 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# Production stage (not used directly, but for reference)
-FROM nginx:alpine as prod
+# Production stage: serve with Nginx
+FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
+COPY ../nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
